<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addFriendActivity">


    <TextView
        android:id="@+id/addFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="Añade un amigo!"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/friendName"
        android:layout_width="237dp"
        android:layout_height="76dp"
        android:layout_marginTop="92dp"
        android:hint="friend's name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFriend" />

    <EditText
        android:id="@+id/friendAge"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginTop="48dp"
        android:hint="Friend's age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendName" />

    <EditText
        android:id="@+id/friendCity"
        android:layout_width="236dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:hint="Friend's City"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendAge" />

    <Button
        android:id="@+id/storeFriend"
        android:layout_width="185dp"
        android:layout_height="68dp"
        android:layout_marginTop="84dp"
        android:text="Agregar amigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendCity" />


</android.support.constraint.ConstraintLayout>